--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,14 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/font-awesome/css/font-awesome.css",
+              "./node_modules/semantic-ui/dist/semantic.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/semantic-ui/dist/semantic.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -76,8 +81,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css",
-              "../node_modules/font-awesome/css/font-awesome.css"
+              "src/styles.css"            
             ],
             "scripts": [],
             "assets": [
