--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@types/jquery": "^3.3.21",
+    "@types/semantic-ui": "^2.2.6",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "ng2-semantic-ui": "^0.9.7",
     "rxjs": "~6.2.0",
+    "semantic-ui": "^2.4.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
