--- a/angular.json
+++ b/angular.json
@@ -27,12 +27,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "./node_modules/font-awesome/css/font-awesome.css",
-              "./node_modules/semantic-ui/dist/semantic.min.css"
+              "./node_modules/font-awesome/css/font-awesome.css",              
+              "./node_modules/semantic-ui/dist/semantic.min.css",
+              "src/styles.scss"
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/jquery/dist/jquery.min.js",              
               "./node_modules/semantic-ui/dist/semantic.min.js"
             ]
           },
