--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "angular2-hotkeys": "^2.1.4",
     "codelyzer": "~4.3.0",
+    "guid-typescript": "^1.0.9",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -49,6 +51,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "lodash": "^4.17.11",
     "protractor": "~5.4.0",
+    "ts-keycode-enum": "^1.0.6",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
