--- a/POS.Api/package.json
+++ b/POS.Api/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.0",
     "express": "^4.16.4",
+    "lodash": "^4.17.11",
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.42.0"
