--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
             "styles": [
               "./node_modules/font-awesome/css/font-awesome.css",              
               "./node_modules/semantic-ui/dist/semantic.min.css",
-              "src/styles.scss"
+              "src/site.scss"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",              
@@ -81,7 +81,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"            
+              "src/site.css"            
             ],
             "scripts": [],
             "assets": [
