--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
     "@angular/material": "^7.0.2",
+    "@angular/material-moment-adapter": "^7.3.1",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
