--- a/POS.Api/package.json
+++ b/POS.Api/package.json
@@ -11,6 +11,7 @@
     "name": ""
   },
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.0",
     "express": "^4.16.4",
