--- a/POS.Api/package.json
+++ b/POS.Api/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.4",
+    "bluebird": "^3.5.3",
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
