More handling on hot keys

--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,9 @@
               "src/site.scss"
             ],
             "scripts": [
-              "./node_modules/jquery/dist/jquery.min.js",              
-              "./node_modules/semantic-ui/dist/semantic.min.js"
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/semantic-ui/dist/semantic.min.js",
+              "src/scripts/dropdown.js"
             ]
           },
           "configurations": {
