--- a/angular.json
+++ b/angular.json
@@ -54,6 +54,14 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true
+            },
+            "hmr": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.hmr.ts"
+                }
+              ]
             }
           }
         },
@@ -65,6 +73,10 @@
           "configurations": {
             "production": {
               "browserTarget": "POS:build:production"
+            },
+            "hmr": {
+              "hmr": true,
+              "browserTarget": "POS:build:hmr"
             }
           }
         },
