--- a/POS.Api/package.json
+++ b/POS.Api/package.json
@@ -17,9 +17,11 @@
     "bluebird": "^3.5.3",
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.0",
+    "exceljs": "^1.10.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.42.0"
